@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Webserver {
- {static} PORT :int
- {static} FORMATTER : DateTimeFormatter
+ Webserver()
}

class SocketThread {
- insocked : Socked
- makeRequest(tokens : String[]) : Request
- makeRequestReader(tokens : String[]) : RequestReader
- makeRequestArea(tokens : String[]) : RequestArea
- makeHeaderAnswer() : String
- makeJsonAnswer(request : Request) : String
+ run()
}

Webserver +-right- SocketThread

note right of SocketThread
inner class
of Webserver
end note

class DirectoryAreas {
- {static} allDoors : Door[]
- {static} rootArea : Area
+ {static} makeAreas()
+ {static} findAreaById(id : String) : Area
+ {static} findDoorById(id : String) : Door
+ {static} getAllDoors() : Door[]
}

DirectoryAreas --> "*" Door : "allDoors"

class DirectoryUsersGroups {
- {static} usersGroups : UserGroup[]
- {static} THIS_YEAR : int
+ {static} makeUserGroups()
+ {static} findUserByCredential(credential : String) : User
}

class UsersGroup {
- name : String
- schedule : Schedule
- actions : String[]
- users : User[]
- areas : Area[]
+ UserGroup(name : String, schedule : Schedule,
actions : String[] ,areas : Area[], users : User[])
+ getName() : String
+ canBeInSpace(sp : Space) : boolean
+ canSendRequest(now : LocalDateTime) : boolean
+ canDoAction(action : String) : boolean
}


Schedule --> "1" UsersGroup : "schedule"
DirectoryUsersGroups o--> "*" UsersGroup : "usersGroup"
UsersGroup "1 userGroup" *--> "*" User : "users"

class Door {
- id : String
- closed : boolean
- state : DoorState
- fromSpace : Space
- toSpace : Space
+ Door(id : String, fromSpace : Space, toSpace : Space)
+ processRequest(request : RequestReader)
+ isClosed() : boolean
- doAction(action : String)
+ getId() : String
+ getStateName() : String
+ toJson() : JSONObject
+ toString() : String
+ setState(doorState : DoorState)
+ setClosed(b : boolean)
+ getFromSpace() : Space
+ getToSpace() : Space
}


class User {
- name : String
- credential : String
- group : UserGroup
+ User(name: String, credential: String)
+ getCredential() : String
+ toString() : String
+ canBeInSpace(sp : Space) : boolean
+ canSendRequest(now : LocalDateTime) : boolean
+ canDoAction(action : String) : boolean
+ setGroup(group : UsersGroup)
}


class Main {
+ {static} main(args : String)
}

note right of Main::main
DirectoryAreas.makeAreas()
DiretoryUsers.makeUsers()
new Webserver()
end note

package doorState <<Folder>> {
    class States {
    {static} LOCKED : String
    {static} UNLOCKED : String
    {static} UNLOCKED_SHORTLY : String
    {static} PROPPED : String
    }

    class Actions {
    + {static} LOCK : String
    + {static} UNLOCK : String
    + {static} UNLOCK_SHORTLY : String
    + {static} PROPPED : String
    + {static} OPEN : String
    + {static} CLOSE : String
    }

    abstract class DoorState {
    # door : Door
    # name : String
    + DoorStates(Door : door)
    + {abstract} open()
    + {abstract} close()
    + {abstract} lock()
    + {abstract} unlock()
    + {abstract} unlock_shortly()
    }

    class Unlocked extends DoorState {
    +Unlocked(Door : door)
    + open()
    + close()
    + lock()
    + unlock()
    + unlock_shortly()
    }

    class Locked extends DoorState {
    + Locked(Door : door)
    + open()
    + close()
    + lock()
    + unlock()
    + unlock_shortly()
    }

    interface Observer {
    +update(o : Observable,
    arg : Object)
    }

    class UnlockedShortly extends DoorState implements Observer {
    - {static} MAX_TIME : int
    - {static} clock : Clock
    - timeUnlocked : LocalDateTime
    + UnlockedShortly(Door : door)
    + open()
    + close()
    + lock()
    + unlock()
    + unlock_shortly()
    + update(o : Observable, arg : Object)
    }

    class Propped extends DoorState  {
    + Propped(Door : door)
    + open()
    + close()
    + lock()
    + unlock()
    + unlock_shortly()
    }

    abstract class Observable {

    +addObserver(ob : Observer)
    +deleteObserver(ob : Observer)
    +setChanged()
    +notifyObservers(arg0 : Observable,
        arg1 : Object)
    }

    class Clock implements Observable {
    - date : LocalDateTime
    - timer : Timer
    - period : int
    -instance : Clock
    + Clock(period : int)
    + getInstance(period : int) : Clock
    + start()
    + stop()
    + getDate() : LocalDateTime
    }
Actions -[hidden]right- DoorState
DoorState -[hidden]right- States
}
Door --> "1" DoorState : "state"

abstract class Area {
#id: String
__
+ Area: (id : String)
+ {abstract} acceptVisitor(vis : Visitor)
+ {abstract} toString() : String
+ {abstract} toJson() : JSONObject
}

class Spaces extends Area{
- doors : Door[]
- group : Partition
+ Space(id : String, group : Partition)
+ acceptVisitor(vis : Visitor)
+ addDoor(Door : door)
+ getDoors(): Door[]
}

class Partition extends Area{
- partition : Partition
- areas : Area[]
__
+ Partition(id : String, partition : Partition)
+ acceptVisitor(vis : Visitor)
+ addArea(Area : area)
+ getAreas(): Area[]
}
interface Visitor {
+ visitPartition(Partition partition);
+ visitSpace(Space space);
}
class FindAreaVisitor implements Visitor {
- foundArea : Area
- areaId : String
+ FindAreaVisitor(areaId : String)
+ getFoundArea(): Area
+ visitPartition(Partition partition);
+ visitSpace(Space space);
}
class CanBeInSpaceVisitor implements Visitor {
- spaceToFind : Space
- found : boolean
+ CanBeInSpaceVisitor(spaceToFind : Space)
+ isFound(): boolean
+ visitPartition(Partition partition);
+ visitSpace(Space space);
}
class CollectorVisitor implements Visitor {
- areaId : String
- spaces : Space[]
- doors : Door[]
+ CollectorVisitor(areaId : String)
+ getSpaces(): Space[]
+ getDoors(): Door[]
+ visitPartition(Partition partition);
+ visitSpace(Space space);
}
class Schedule {
- firstDay : LocalDate
- lastDay : LocalDate
- daysOfTheWeek : DayOfWeek[]
- fromTime : LocalTime
- toTime : LocalTime
+ Schedule(firstDay : LocalDate, lastDay : LocalDate, daysOfTheWeek : DayOfWeek[], fromTime : LocalTime, toTime : LocalDate)
+ canSendRequest(now : LocalDateTime) : boolean
}

Partition *--> "*" Area : areas
User --> "*" Area : "areas"
Spaces --> "*" Door : "doors"
Door --> "1" Spaces : "fromSpace"
Door --> "1" Spaces : "toSpace"
Observable *--> "*" Observer : observers

Observable -[hidden]right- Observer
Spaces -[hidden]right- Door
Partition -[hidden]left- Area
UsersGroup -[hidden]right- User
Partition -[hidden]right- Visitor
SocketThread -[hidden]down- Main

@enduml